Mutant Year Zero/mutantyearzero.css
/* ... */
.sheet-weapons-box8 {
  grid-row-start: 1;
  grid-column-start: 8;
}

.sheet-weapons-box9 {
  grid-row-start: 1;
  grid-column-start: 9;
}

.sheet-weapons-box10 {
  grid-row-start: 2;
  grid-column: 1/10;
}

.sheet-weapons-box11 {
  grid-column-start: 1;
}
/* ---------------------------------- Dice Pool */

.sheet-dice_pool-grid {
  display: grid;
  grid-template-columns: 6em 7em 6em;
  grid-template-rows: auto;
  grid-column-gap: 2px;
  grid-row-gap: 2px;
  padding-bottom: 5px;
}

.sheet-dice_pool-box1 {
  grid-row-start: 1;
  grid-column: 1/4;
}

/* ---------------------------------- Talents */

.sheet-talents-grid {
  display: grid;
  grid-template-columns: auto 4em 3em;
  grid-row-gap: 2px;
  grid-column-gap: 2px;
}

.sheet-talents-box,
.sheet-mutant-box {
  grid-row-start: 1;
  grid-column: 1/4;
}

.sheet-talents-box1 {
  grid-row-start: 1;
  grid-column-start: 1;
}

.sheet-talents-box2 {
  grid-row-start: 1;
  grid-column-start: 2;
}

.sheet-talents-box3 {
  grid-row-start: 1;
  grid-column-start: 3;
}

.sheet-talents-box4 {
  grid-row-start: 2;
  grid-column: 1/4;
}

/* ---------------------------------- Skills */
.sheet-skills-grid > span {
  display: grid;
  grid-template-columns: 12em 3em 2em 0.75em 2em;
  grid-row-gap: 2px;
  grid-column-gap: 2px;
  padding: 1px 0 1px 0;
}

.sheet-skills-grid > span > div {
  display: flex;
  justify-content: space-around;
  align-items: center;
}

.sheet-skills-box1 {
  grid-row-start: 1;
  grid-column: 1/6;
}

.sheet-skills-box2 {
  grid-row-start: 1;
  grid-column: 2/3;
}

.sheet-skills-box3 {
  grid-row-start: 1;
  grid-column-start: 3;
}

.sheet-skills-box4 {
  grid-row-start: 1;
  grid-column-start: 4;
}

.sheet-skills-box5 {
  grid-row-start: 1;
  grid-column-start: 5;
}

/* ---------------------------------- Armor/Helmet */

.sheet-armor-container {
  display: grid;
  grid-template-columns: 1.5fr 1fr;
  grid-column-gap: 10px;
  padding-bottom: 2px;
}

.sheet-armor-grid {
  display: grid;
  grid-template-columns: auto 1.75em 3em 3em 3em;
  grid-row-gap: 2px;
  grid-column-gap: 2px;
}

.sheet-armor-subgrid {
  display: grid;
  grid-template-columns: 9em 1.75em 3em 3em 3em;
  grid-column-gap: 4px;
  justify-content: end;
}

.sheet-armor-subgrid > span,
.sheet-armor-subgrid > input {
  display: flex;
  justify-content: space-around;
  align-items: center;
}

.sheet-armor-box {
  grid-row-start: 1;
  grid-column: 1/6;
}

.sheet-armor-box1 {
  grid-row-start: 1;
  grid-column-start: 1;
}

.sheet-armor-box2 {
  grid-row-start: 1;
  grid-column-start: 2;
}

.sheet-armor-box3 {
  grid-row-start: 1;
  grid-column-start: 3;
}

.sheet-armor-box4 {
  grid-row-start: 1;
  grid-column-start: 4;
}

.sheet-armor-box5 {
  grid-row-start: 1;
  grid-column-start: 5;
}

.sheet-armor-box6 {
  grid-row-start: 2;
  grid-column: 1/6;
}

.sheet-armor-box7 {
  grid-row-start: 3;
  grid-column: 1/6;
}

.sheet-armor-box8 {
  grid-row-start: 4;
  grid-column: 1/6;
}

/* ---------------------------------- Shield */
.sheet-shield-grid {
  display: grid;
  grid-template-columns: auto 3em 3em;
  grid-template-rows: max-content;
  grid-row-gap: 2px;
  grid-column-gap: 2px;
}

.sheet-shield-box {
  grid-row-start: 1;
  grid-column: 1/4;
}

.sheet-shield-box1 {
  grid-row-start: 1;
  grid-column-start: 1;
}

.sheet-shield-box2 {
  grid-row-start: 1;
  grid-column-start: 2;
}

.sheet-shield-box3 {
  grid-row-start: 1;
  grid-column: 3;
}

.sheet-shield-box4 {
  grid-row-start: 2;
  grid-column: 1/4;
}

/* ---------------------------------- Consumables */

.sheet-consumables-grid {
  display: grid;
  grid-template-columns: auto 3.5em 3em;
  grid-template-rows: auto;
  grid-row-gap: 2px;
  padding: 0 0 2px 0;
}

.sheet-consumables-grid > div {
  display: flex;
  justify-content: space-around;
  align-items: center;
}

.sheet-consumables-box1 {
  grid-row-start: 1;
  grid-column: 1/4;
}

.sheet-consumables-box2 {
  grid-row-start: 1;
  grid-column: 2/3;
}

.sheet-consumables-box3 {
  grid-row-start: 1;
  grid-column-start: 3;
}

.sheet-consumables-box4 {
  grid-row-start: 2;
  grid-column-start: 1;
}

.sheet-consumables-box5 {
  grid-row-start: 2;
  grid-column-start: 2;
}

.sheet-consumables-box6 {
  grid-row-start: 2;
  grid-column-start: 3;
}

.sheet-consumables-grid div:nth-child(even) > span.sheet-header-h1 {
  margin-left: -25px;
}

.sheet-consumables-grid div:nth-child(odd) > span.sheet-header-h1 {
  margin-right: -25px;
}

/* ---------------------------------- Gear */

.sheet-gear-grid {
  display: grid;
  grid-template-columns: auto 3em 2em 3em;
  grid-template-rows: auto;
  grid-row-gap: 2px;
}

.sheet-gear-subgrid {
  display: grid;
  grid-template-columns: 4em 3em 9em 3em;
  grid-column-gap: 2px;
}

.sheet-gear-subgrid > div {
  display: flex;
  justify-content: space-around;
  align-items: center;
}

.sheet-gear-box1 {
  grid-row-start: 1;
  grid-column: 1/5;
}

.sheet-gear-box2 {
  grid-row-start: 1;
  grid-column-start: 2;
}

.sheet-gear-box3 {
  grid-row-start: 1;
  grid-column-start: 3;
}

.sheet-gear-box4 {
  grid-row-start: 1;
  grid-column-start: 4;
}

.sheet-gear-box5 {
  grid-row-start: 2;
  grid-column: 1/5;
}

.sheet-gear-coin {
  grid-row-start: 3;
  grid-column: 1/5;
}

.sheet-gear-box6 {
  grid-row-start: 4;
  grid-column: 1/5;
}

.sheet-gear-box7 {
  grid-row-start: 1;
  grid-column: 1/2;
}

.sheet-gear-box8 {
  grid-row-start: 1;
  grid-column-start: 2;
}

.sheet-gear-box9 {
  grid-row-start: 1;
  grid-column-start: 3;
}

.sheet-gear-box10 {
  grid-row-start: 1;
  grid-column-start: 4;
}

/* ---------------------------------- Mount */

.sheet-mount-grid {
  display: grid;
  grid-template-columns: auto repeat(4, 2.5em);
  grid-template-rows: auto;
  grid-row-gap: 2px;
  position: relative;
}

.sheet-mount-grid > div {
  display: flex;
  justify-content: space-around;
  align-items: center;
}

.sheet-mount-box1 {
  grid-row-start: 1;
  grid-column: 1/6;
}

.sheet-mount-box2 {
  grid-row-start: 2;
  grid-column-start: 1;
}
/* ... */

